0.28   2009-09-15

- Doc fixes - RT #48484 (Terrence Brannon) and #49595 (Guoying Qi)


0.27   2009-08-18

- Changed all code that checked for a Fey::SQL::Select object to instead check
  that the object does the Fey;:Role::SQL::ReturnsData role. This lets you
  pass a union to an object iterator, among other things.


0.26   2009-07-03

- Changes to work with the latest Moose (0.86).


0.25   2009-06-21

- Changes to work with the latest Moose (0.82).


0.24   2009-04-20

- Shut up a warning from the latest Moose that it will not inline a
  constructor for Fey::Object::Table.


0.23   2009-04-07

- Changes to work with the latest Moose (0.73_01+).


0.22   2009-03-23

- If a table consisted of _just_ its key, then trying to call new()
  for the associated class blew up, but they could be created via an
  iterator. Test case provided by Andrew Baumhauer.


0.21   2009-02-25

* This release contains several backwards incompatible changes.

* Fey::Object::Iterator has been renamed to
  Fey::Object::Iterator::FromSelect. Fey::Object::Iterator::Caching is
  now has Fey::Object::Iterator::FromSelect::Caching. This was done to
  allow for a new class, Fey::Object::Iterator::FromArray. There is
  now a Fey::ORM::Role::Iterator role which all of these classes
  do. Based on a patch from Bryan Deeney and Will Weaver.

* The iterator methods all and all_as_hashes now really return _all_
  of the data, which means they will reset the iterator if needed.

- Added remaining and remaining_as_hashes methods to iterators. These
  do what all and all_as_hashes did previously. Thanks 

- The transform feature now supports passing delegation for the
  inflated object. See Fey::ORM::Table for details.


0.20   2009-02-06

- Use MooseX::Params::Validate instead of the no-longer-in-Fey
  Fey::Validate.


0.19   2009-01-18

- Added attribute metaclasses for attributes created based on columns
  (Fey::Meta::Attribute::FromColumn), and attributes based on an