@@ -3,6 +3,8 @@ package Fey::Hash::ColumnsKey;
 use strict;
 use warnings;
 
+our $VERSION = '0.28';
+
 
 sub new
 {
