@@ -3,6 +3,8 @@ package Fey::Meta::Class::Table;
 use strict;
 use warnings;
 
+our $VERSION = '0.28';
+
 use Fey::Exceptions qw( param_error );
 use Fey::Hash::ColumnsKey;
 use Fey::Object::Policy;
