@@ -3,6 +3,8 @@ package Fey::Meta::FK;
 use strict;
 use warnings;
 
+our $VERSION = '0.28';
+
 use Fey::Exceptions qw( param_error );
 
 use Moose;
