@@ -3,6 +3,8 @@ package Fey::ORM::Exceptions;
 use strict;
 use warnings;
 
+our $VERSION = '0.28';
+
 use Fey::Exceptions;
 
 
