@@ -3,6 +3,8 @@ package Fey::Object::Iterator::FromSelect::Caching;
 use strict;
 use warnings;
 
+our $VERSION = '0.28';
+
 use Moose;
 use MooseX::SemiAffordanceAccessor;
 use MooseX::StrictConstructor;
