@@ -12,6 +12,10 @@ for (<DATA>) {
 
 add_stopwords(@stopwords);
 set_spell_cmd('aspell list -l en');
+
+# This prevents a weird segfault from the aspell command - see
+# https://bugs.launchpad.net/ubuntu/+source/aspell/+bug/71322
+local $ENV{LC_ALL} = 'C';
 all_pod_files_spelling_ok;
 
 __DATA__
@@ -20,17 +24,24 @@ attribute's
 deflator
 deflators
 dbms
+dbh
 DBI
 fk
+FromSelect
 inflator
+iterator's
 lookup
 ORM
 metaclass
+metaclass's
 multi
 namespace
 nullable
+params
 rethrows
+SomeTable
+SQLite
+subref
 unhashed
 unsets
 username
-
